# digcross

./: CMakeLists.txt  CreateDigcrossdUser.cmake.in  LICENSE  README  README.md  digikryss.pro
admin-config/: 51-digcross-auth.conf.in  org.digcross.admin.authentication.policy.in
admin-src/: admin_main.cpp
calculator/: button.cpp  button.h  calculator.cpp  calculator.h
daemon/: daemon.cpp  daemon.h  daemon_common.h  main.cpp
daemon-config/: 51-digcross-auth.conf.in  org.digcross.admin.authentication.policy.in  org.digcross.daemonconnection.conf.in  org.digcross.daemonconnection.service.in
docs/: classes.dot  daemon.md
src/: calculator.cpp  calculator.h  cardreader.cpp  cardreader.h  daemon_client.cpp  daemon_client.h  main.cpp  mainwindow.cpp  mainwindow.h  shoppinglist.cpp  shoppinglist.h  userdatabase.cpp  userdatabase.h
tests/: CMakeLists.txt  cardreader-t.cpp  cardreader-t.h  daemon_client-t.cpp  daemon_client-t.h  shoppinglist-t.cpp  shoppinglist-t.h  userdatabase-t.cpp  userdatabase-t.h
